Fix sidebar spacing

--- a/src/pages/ReadsEditor.module.scss
+++ b/src/pages/ReadsEditor.module.scss
@@ -1002,6 +1002,7 @@ input.textInput {
       font-size: 16px;
       font-weight: 400;
       line-height: 20px;
+      margin-top: 0;
     }
   }
 
@@ -1015,6 +1016,7 @@ input.textInput {
       font-size: 16px;
       font-weight: 400;
       line-height: 20px;
+      margin-top: 0;
     }
     .toolButton {
       border-radius: 99px;
@@ -1047,6 +1049,7 @@ input.textInput {
       font-size: 16px;
       font-weight: 400;
       line-height: 20px;
+      margin-top: 0;
     }
     .status {
       margin-top: -12px;
